tests/error_tests/double_main.err
resolver error: reachable end of non void function
 ==> ./tests/error_tests/double_main.tau:2:1
1 |func main() -> int{
  |               ^^^ function returns non void type
2 |} <- missing return statement
